--- a/2_paskaita_2pratimas/client/index.html
+++ b/2_paskaita_2pratimas/client/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <input type="text" id="usersInput">
+    <input type="text" id="usersInput" placeholder="Enter product">
+    <input type="number" id="price" placeholder="Enter price">
     <button id="addItems">Add items</button>
     <ul id="allProducts"></ul>
     <script src="script.js"></script>    
