fixed issue with agree

--- a/3_paskaita_1pratimas/client/index.html
+++ b/3_paskaita_1pratimas/client/index.html
@@ -10,12 +10,12 @@
     <table>
         <tr>
             <th>Vardas</th>
-            <th>Pavarde</th>
+            <th>Pavardė</th>
             <th>Adresas</th>
-            <th>Pasto kodas</th>
+            <th>Pašto kodas</th>
             <th>Miestas</th>
             <th>Telefonas</th>
-            <th>El. pastas</th>
+            <th>El. paštas</th>
         </tr>
     </table>
     <script src="script.js"></script>
