--- a/3_paskaita_1pratimas/client/register.html
+++ b/3_paskaita_1pratimas/client/register.html
@@ -10,25 +10,25 @@
 <body>
     <h3>Registracija naujiems klientams</h3>
     <form action="">
-        <label for="">Slaptazodis: *</label>
-        <input type="password" id="pass"><br>
-        <label for="">Slaptazodis: *</label>
+        <label for="">Slaptažodis: *</label>
+        <input type="password" id="pass" required><br>
+        <label for="">Slaptažodis: *</label>
         <input type="password" id="retypePass"><br>
-        <label for="">El. pastas: *</label>
+        <label for="">El. paštas: *</label>
         <input type="text" id="email"><br>
         <label for="">Vardas: *</label>
         <input type="text" id="name"><br>
-        <label for="">Pavarde: *</label>
+        <label for="">Pavardė: *</label>
         <input type="text" id="surname"><br>
         <label for="">Adresas: *</label>
         <input type="text" id="address"><br>
-        <label for="">Pasto kodas:</label>
+        <label for="">Pašto kodas:</label>
         <input type="text" id="zip"><br>
         <label for="">Miestas: *</label>
         <input type="text" id="city"><br>
         <label for="">Telefonas: *</label>
         <input type="tel" id="phone"><br>
-        <label for="check">As sutinku su paslaugu teikimo salygomis</label>
+        <label for="check">Aš sutinku su paslaugų teikimo salygomis</label>
         <input type="checkbox" id="check" name="check"><br>
         
     </form>
