made final changed, required fixed

--- a/3_paskaita_1pratimas/client/register.html
+++ b/3_paskaita_1pratimas/client/register.html
@@ -13,26 +13,26 @@
         <label for="">Slaptažodis: *</label>
         <input type="password" id="pass" required><br>
         <label for="">Slaptažodis: *</label>
-        <input type="password" id="retypePass"><br>
+        <input type="password" id="retypePass" required><br>
         <label for="">El. paštas: *</label>
-        <input type="text" id="email"><br>
+        <input type="text" id="email" required><br>
         <label for="">Vardas: *</label>
-        <input type="text" id="name"><br>
+        <input type="text" id="name" required><br>
         <label for="">Pavardė: *</label>
-        <input type="text" id="surname"><br>
+        <input type="text" id="surname" required><br>
         <label for="">Adresas: *</label>
-        <input type="text" id="address"><br>
+        <input type="text" id="address" required><br>
         <label for="">Pašto kodas:</label>
         <input type="text" id="zip"><br>
         <label for="">Miestas: *</label>
-        <input type="text" id="city"><br>
+        <input type="text" id="city" required><br>
         <label for="">Telefonas: *</label>
-        <input type="tel" id="phone"><br>
+        <input type="tel" id="phone" required><br>
         <label for="check">Aš sutinku su paslaugų teikimo salygomis</label>
         <input type="checkbox" id="check" name="check"><br>
-        
+        <input type="submit" id="registerBtn" value="Registruotis"> 
     </form>
-    <button id="registerBtn">Registruotis</button>
+
     <script src="script.js"></script>
 </body>
 </html>
