--- a/final_task/client/usermanagement.html
+++ b/final_task/client/usermanagement.html
@@ -9,30 +9,28 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">  
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />   
-    
-    
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet"> 
 <body>
     <header>
         <nav class="flex">
-            <a href="">Memberships</a>
-            <a href="" class="grey">Users</a>
+            <a href="" class="grey">Memberships</a>
+            <a href="">Users</a>
         </nav>
     </header>
     <main>
         <div class="flex">
             <div>
-                <h3>Membership Management</h3>
-                <p>Here you can manage your membership packages. Note: Make sure you are not deleting or deactivating packages assigned to active users</p>
+                <h3>User Management</h3>
+                <a href="" class="sort">Sorting By Name: ASC</a>
+                <i></i>
             </div>
             <div>
-                <button  class="btnNewMem" id="newMember">+ New Membership</button>
+                <button  class="btnNewMem" id="newUser">+ New User</button>
             </div>            
         </div>
         <div class="boxes">
         </div>
-        <script src="index.js"></script>
+        <script src="usermanagement.js"></script>
     </main>
     <footer>
         <p><span class="smallText">Copyright &copy2023 Membership Manager</span></p>
