--- a/final_task/client/index.html
+++ b/final_task/client/index.html
@@ -11,13 +11,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">  
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />   
-    
-    
 <body>
     <header>
         <nav class="flex">
-            <a href="">Memberships</a>
-            <a href="" class="grey">Users</a>
+            <a href="index.html" id="navMem">Memberships</a>
+            <a href="usermanagement.html" id="navUsers" class="grey">Users</a>
         </nav>
     </header>
     <main>
